assignment/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogcat-backend-dep
  namespace: assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dogcat-backend
  template:
    metadata:
      labels:
        app: dogcat-backend
    spec:
      containers:
        - name: dogcat-backend
          image: mtuomiko/dogcat-backend:0.0.4
          ports:
          - name: web
            containerPort: 8090
