assignment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogcat-backend-svc
  namespace: assignment
spec:
  type: ClusterIP
  selector:
    app: dogcat-backend
  ports:
    - port: 5700
      protocol: TCP
      targetPort: 5700
