assignment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-assignment-ingress
  namespace: assignment
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
        - path: /assignment
          pathType: Prefix
          backend:
            service:
              name: dogcat-backend-svc
              port:
                number: 5700
